--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -1,5 +1,10 @@
+.carousel-inner img{
+    filter: brightness(0.7);
+    -webkit-backdrop-filter: brightness(0.7);
+}
+
 .carousel-caption{  
-  font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-family: Arial, Helvetica, sans-serif
   text-shadow: 0em 0em .3em #fff;
   /* color: black; */
 }
