menambahkan section price

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -49,3 +49,8 @@
   background-color: #fff;
   color: #5e5e5e;
 }
+
+.navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show>.nav-link {
+  color: #d7804a;
+  font-weight: bold;
+}
